fixes bug 98884 "Automatic page refresh for Expires META tag not working" r=gagan, sr=dougt